--- a/app/views/investigations/index.html.erb
+++ b/app/views/investigations/index.html.erb
@@ -1,5 +1,10 @@
+<ol class="breadcrumb">
+  <li class="active">HOME</li>
+</ol>
+
+
 <h2>案件一覧</h2>
-<p><%= link_to '新規登録', new_investigation_path, :class=>"btn btn-default" %></p>
+<p><%= link_to '新規登録', new_investigation_path, :class=>"btn btn-primary" %></p>
 
 <table class="table table-striped table-hover">
   <tr>
