--- a/app/views/investigations/show.html.erb
+++ b/app/views/investigations/show.html.erb
@@ -1,27 +1,39 @@
-<h2><%= @investigation.construction_name %></h2>
-<p>
-  <%= link_to '編集', edit_investigation_path, :class=>"btn btn-default" %>
-  <%= link_to '一覧に戻る', investigations_path, :class=>"btn btn-default" %>
-</p>
+<ol class="breadcrumb">
+  <li><%= link_to 'HOME', root_path %></li>
+  <li class="active"><%= @investigation.construction_name %></li>
+</ol>
 
-<table class="table table-striped table-hover">
+<h2><%= @investigation.construction_name %></h2>
+<p><%= link_to '編集', edit_investigation_path, :class=>"btn btn-default" %></p>
+
+<table class="table">
   <tr>
-    <th class="text-center">ID</th>
-    <th class="text-center">調査内容</th>
-    <th class="text-center">施工者</th>
-    <th class="text-center">調査場所</th>
-    <th class="text-center">調査機関</th>
+    <th>ID</th>
+    <td class="align-middle"><%= @investigation.id %></td>
   </tr>
   
   <tr>
-    <td class="text-center align-middle"><%= @investigation.id %></td>
-    <td class="text-center align-middle"><%= @investigation.content %></td>
-    <td class="text-center align-middle"><%= @investigation.builder %></td>
-    <td class="text-center align-middle"><%= @investigation.place %></td>
-    <td class="text-center align-middle"><%= @investigation.investigator %></td>
+    <th>調査内容</th>
+    <td class="align-middle"><%= @investigation.content %></td>
+  </tr>
+  
+  <tr>
+    <th>施工者</th>
+    <td class="align-middle"><%= @investigation.builder %></td>
+  </tr>
+  
+  <tr>
+    <th>調査場所</th>
+    <td class="align-middle"><%= @investigation.place %></td>
+  </tr>
+  
+  <tr>
+    <th>調査機関</th>
+    <td class="align-middle"><%= @investigation.investigator %></td>
   </tr>
 </table>
 
+<hr/>
 
 <h2>家屋一覧</h2>
 <p><%= link_to '新規登録', new_house_path(investigation_id: @investigation.id), :class=>"btn btn-default" %></p>
