--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="center jumbotron">
   <div class="text-center">
-    <h1>ようこそ！ 家屋調査</h1>
-    <%= link_to 'Login now!', login_path, class: 'btn btn-lg btn-primary' %>
+    <h1>ようこそ！</h1>
+    <%= link_to 'ログイン', login_path, class: 'btn btn-lg btn-primary' %>
   </div>
 </div>
