--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,25 +1,14 @@
-<div class="text-center">
-  <h2>パスワード変更</h2>
-  <%= link_to '戻る', :back, :class=>"btn btn-default" %>  
-</div>
+<ol class="breadcrumb">
+  <li><%= link_to 'HOME', root_path %></li>
+  
+  <% if current_user.role == "superuser" %>
+    <li><%= link_to 'ユーザー一覧', users_path %></li>
+  <% end %>
+  
+  <li class="active"><%= @user.email %>の編集</li>
+</ol>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
 
-    <%= form_for(@user) do |f| %>
-      <%= render 'layouts/error_messages', model: f.object %>
+<h2 class="text-center"><%= @user.email %>の編集</h2>
 
-      <div class="form-group">
-        <%= f.label :password, 'パスワード' %>
-        <%= f.password_field :password, class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :password_confirmation, 'パスワード（確認）' %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
-      </div>
-      
-      <%= f.submit '変更', class: 'btn btn-primary btn-block' %>
-    <% end %>
-  </div>
-</div>
+<%= render 'users/form' %>
