--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,30 +1,27 @@
-<h2>ユーザー管理</h2>
-<p><%= link_to '新規ユーザー作成', new_user_path, :class=>"btn btn-default" %></p>
+<ol class="breadcrumb">
+  <li><%= link_to 'HOME', root_path %></li>  
+  <li class="active">ユーザー一覧</li>
+</ol>
+
+<h2>ユーザー一覧</h2>
+<p><%= link_to '新規ユーザー登録', new_user_path, :class=>"btn btn-primary" %></p>
 
 <table class="table table-striped table-hover">
   <tr>
-    <th class="text-center">ID</th>
-    <th class="text-center">メールアドレス</th>
-    <th class="text-center">権限グループ</th>
-    <th class="text-center"></th>
+    <th>ID</th>
+    <th>メールアドレス</th>
+    <th>権限グループ</th>
+    <th></th>
+    <th></th>
   </tr>
   
   <% @users.each do |user| %>
     <tr>
-      <td class="text-center align-middle"><%= user.id %></td>
-      <td class="text-center align-middle"><%= user.email %></td>
-      <td class="text-center align-middle">
-        <% if user.role == "superuser" %>
-          システム管理者
-        <% elsif user.role == "admin" %>
-          管理者
-        <% else %>
-          一般ユーザー
-        <% end %>
-      </td>
-      <% unless user.role == "superuser" %>
-        <td class="text-center align-middle"><%= link_to "削除", user, :class=>"btn btn-danger", method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %></td>
-      <% end %>
+      <td class="align-middle"><%= user.id %></td>
+      <td class="align-middle"><%= user.email %></td>
+      <td class="align-middle"><%= disp_user_role(user.role) %></td>
+      <td class="align-middle"><%= link_to "編集", edit_user_url(user.id), :class=>"btn btn-default" %></td>
+      <td class="align-middle"><%= link_to "削除", user, :class=>"btn btn-danger", method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %></td>
     </tr>
   <% end %>
 </table>
