--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,35 +1,9 @@
-<div class="text-center">
-  <h2>新規ユーザー作成</h2>
-  <%= link_to '戻る', :back, :class=>"btn btn-default" %>
-</div>
+<ol class="breadcrumb">
+  <li><%= link_to 'HOME', root_path %></li>
+  <li><%= link_to 'ユーザー一覧', users_path %></li>
+  <li class="active">新規ユーザー登録</li>
+</ol>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+<h2 class="text-center">新規ユーザー登録</h2>
 
-    <%= form_for(@user) do |f| %>
-      <%= render 'layouts/error_messages', model: f.object %>
-
-      <div class="form-group">
-        <%= f.label :email, 'メールアドレス' %>
-        <%= f.email_field :email, class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :password, 'パスワード' %>
-        <%= f.password_field :password, class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :password_confirmation, 'パスワード（確認）' %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
-      </div>
-      
-      <div class="form-group">
-        <%= f.label :role, '権限グループ' %>
-        <%= f.select :role, [["管理者", "admin"], ["一般ユーザー", "operator"]], class: 'form-control' %>
-      </div>
-
-      <%= f.submit '登録', class: 'btn btn-primary btn-block' %>
-    <% end %>
-  </div>
-</div>
+<%= render 'users/form' %>
