--- a/app/views/choices/index.html.erb
+++ b/app/views/choices/index.html.erb
@@ -8,23 +8,23 @@
 
 <table class="table table-striped table-hover">
   <tr>
-    <th class="text-center">ID</th>
-    <th class="text-center">マスター名</th>
-    <th class="text-center">カテゴリー</th>
-    <th class="text-center"></th>
+    <th>ID</th>
+    <th>マスター名</th>
+    <th>カテゴリー</th>
+    <th></th>
     <% if current_user.role == "superuser" || current_user.role == "admin" %>
-      <th class="text-center"></th>
+      <th></th>
     <% end %>
   </tr>
   
   <% @choices.each do |choice| %>
       <tr>
-        <td class="text-center align-middle"><%= choice.id %></td>
-        <td class="text-center align-middle"><%= choice.name %></td>
-        <td class="text-center align-middle"><%= disp_choice_category(choice.category) %></td>
-        <td class="text-center align-middle"><%= link_to "編集", edit_choice_path(choice.id), :class=>"btn btn-default" %></td>
+        <td class="align-middle"><%= choice.id %></td>
+        <td class="align-middle"><%= choice.name %></td>
+        <td class="align-middle"><%= disp_choice_category(choice.category) %></td>
+        <td class="align-middle"><%= link_to "編集", edit_choice_path(choice.id), :class=>"btn btn-default" %></td>
         <% if current_user.role == "superuser" || current_user.role == "admin" %>
-          <td class="text-center align-middle"><%= link_to "削除", choice, :class=>"btn btn-danger", method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %></td>
+          <td class="align-middle"><%= link_to "削除", choice, :class=>"btn btn-danger", method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %></td>
         <% end %>
       </tr>
   <% end %>
