--- a/app/views/investigations/show.html.erb
+++ b/app/views/investigations/show.html.erb
@@ -55,7 +55,7 @@
       <tr>
         <td class="text-center align-middle"><%= house.id %></td>
         <td class="text-center align-middle"><%= house.house_name %></td>
-        <td class="text-center align-middle"><%= house.prefectures %><%= house.city %><%= house.city %><%= house.block %></td>
+        <td class="text-center align-middle"><%= house.prefectures %><%= house.city %><%= house.block %></td>
         <td class="text-center align-middle"><%= house.owner %></td>
         <td class="text-center align-middle"></td>
         <td class="text-center align-middle"></td>
