--- a/app/views/houses/_form.html.erb
+++ b/app/views/houses/_form.html.erb
@@ -11,11 +11,12 @@
       </div>
       
       <div class="form-group">
-        <%= f.label :owner, '所有者名' %>
-        <%= f.text_field :owner, :class=>"form-control" %>
+        <%= f.label :resident_phone_number, '居住者電話番号' %>
+        <%= f.telephone_field :resident_phone_number, :class=>"form-control" %>
       </div>
       
       <div class="bg-info" style="padding:10px; margin-bottom:10px;">
+        <p class="lead">建物情報</p>
         <div class="form-group">
           <%= f.label :prefectures, '都道府県*' %>
           <%= f.select :prefectures, Constants::LIST_PREFECTURES, :prompt => "選択してください", :class=>"form-control" %>
@@ -28,8 +29,49 @@
           <%= f.label :block, '番地' %>
           <%= f.text_field :block, :class=>"form-control" %>
         </div>
+        <div class="form-group">
+          <%= f.label :construction, '構造' %>
+          <%= f.select :construction, $HOUSE_CONSTRUCTION, :prompt => "選択してください" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :floors, '階数' %>
+          <%= f.select :floors, $HOUSE_FLOORS, :prompt => "選択してください" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :area, '延面積(m2)' %>
+          <%= f.text_field :area, :class=>"form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :use, '用途' %>
+          <%= f.text_field :use, :class=>"form-control" %>
+        </div>           
       </div>
-    
+      
+      <hr/>
+      
+      <div class="bg-info" style="padding:10px; margin-bottom:10px;">
+        <p class="lead">所有者情報</p>        
+        <div class="form-group">
+          <%= f.label :owner_name, '所有者名' %>
+          <%= f.text_field :owner_name, :class=>"form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :owner_prefectures, '都道府県' %>
+          <%= f.select :owner_prefectures, Constants::LIST_PREFECTURES, :prompt => "選択してください", :class=>"form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :owner_city, '市区町村' %>
+          <%= f.text_field :owner_city, :class=>"form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :owner_block, '番地' %>
+          <%= f.text_field :owner_block, :class=>"form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :owner_phone_number, '所有者電話番号' %>
+          <%= f.telephone_field :owner_phone_number, :class=>"form-control" %>
+        </div>        
+      </div>
       <%= f.submit '登録', :class=>"btn btn-primary" %>
     <% end %>
   </div>
