--- a/app/views/points/_form.html.erb
+++ b/app/views/points/_form.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <!-- <div class="col-md-6 col-md-offset-3"> -->
+  <div style="margin: 10px;">
     <%= form_for(@point) do |f| %>
       <p class="text-right">*必須</p>
       <%= f.hidden_field :survey_id, :value => @survey.id %>
@@ -7,10 +8,7 @@
       <table class="form-group">
         <tr>
           <td>
-            <%= image_tag src="/assets/sampleImage.jpg", :size => "200x200" %>
-            <% if @point.image1? %>
-              <%= image_tag @point.image1, :size => "200x200", :class => "media-object img-rounded img-responsive" %>
-            <% end %>
+            <%= image_tag "sampleImage.jpg", width: "50%" %>
           </td>
           <td>
             <%= f.file_field :image1, :accept => 'image/*', :capture => 'camera' %>
