--- a/app/views/points/_form.html.erb
+++ b/app/views/points/_form.html.erb
@@ -12,7 +12,7 @@
           </td>
           <td>
             <%= f.file_field :image1, :accept => 'image/*', :capture => 'camera' %>
-            <%= f.hidden_field :image1_cache %>
+            <%= f.hidden_field :image1_cache, width: "50%" %>
           </td>
         </tr>
       </table>
