--- a/app/views/points/_form.html.erb
+++ b/app/views/points/_form.html.erb
@@ -11,8 +11,8 @@
             <%= image_tag "sampleImage.jpg", width: "50%" %>
           </td>
           <td>
-            <%= f.file_field :image1, :accept => 'image/*', :capture => 'camera' %>
-            <%= f.hidden_field :image1_cache, width: "50%" %>
+            <%= f.file_field :image1, :accept => 'image/*', :capture => 'camera', width: "50%" %>
+            <%= f.hidden_field :image1_cache %>
           </td>
         </tr>
       </table>
