--- a/app/views/points/_form.html.erb
+++ b/app/views/points/_form.html.erb
@@ -11,7 +11,7 @@
             <%= image_tag "sampleImage.jpg", width: "50%" %>
           </td>
           <td>
-            <%= f.file_field :image1, :accept => 'image/*', :capture => 'camera', style: "height:300px" %>
+            <%= f.file_field :image1, :accept => 'image/*', :capture => 'camera' %>
           </td>
         </tr>
       </table>
