--- a/app/views/points/unused/show.html.erb
+++ b/app/views/points/unused/show.html.erb
@@ -2,7 +2,6 @@
   <li><%= link_to 'HOME', root_path %></li>
   <li><%= link_to @investigation.construction_name, @investigation %></li>
   <li><%= link_to @house.house_name, @house %></li>
-  <li><%= link_to @survey.survey_name, @survey %></li>
   <li class="active"><%= @point.id %></li>
 </ol>
 
@@ -10,8 +9,8 @@
 
 <table class="table table-striped table-hover">
   <tr>
-    <th>ID</th>
-    <td class="align-middle"><%= @point.id %></td>
+    <th>No</th>
+    <td class="align-middle"><%= @point.number %></td>
   </tr>
 
   <tr>
