--- a/app/views/houses/_form.html.erb
+++ b/app/views/houses/_form.html.erb
@@ -46,9 +46,7 @@
           <%= f.text_field :use, :class=>"form-control" %>
         </div>           
       </div>
-      
       <hr/>
-      
       <div class="bg-info" style="padding:10px; margin-bottom:10px;">
         <p class="lead">所有者情報</p>        
         <div class="form-group">
@@ -72,6 +70,42 @@
           <%= f.telephone_field :owner_phone_number, :class=>"form-control" %>
         </div>        
       </div>
+      <hr/>      
+      <div class="bg-info" style="padding:10px; margin-bottom:10px;">
+        <p class="lead">事前調査情報</p>        
+        <div class="form-group">
+          <%= f.label :overview_pre_survey, '建物概要' %>
+          <%= f.select :overview_pre_survey, $SURVEY_OVERVIEW, :prompt => "選択してください" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :range_pre_survey, '調査範囲' %>
+          <%= f.text_field :range_pre_survey, :class=>"form-control" %>
+        </div>
+      </div>
+      <hr/>      
+      <div class="bg-info" style="padding:10px; margin-bottom:10px;">
+        <p class="lead">事中調査情報</p>        
+        <div class="form-group">
+          <%= f.label :overview_ongoing_survey, '建物概要' %>
+          <%= f.select :overview_ongoing_survey, $SURVEY_OVERVIEW, :prompt => "選択してください" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :range_ongoing_survey, '調査範囲' %>
+          <%= f.text_field :range_ongoing_survey, :class=>"form-control" %>
+        </div>
+      </div>     
+      <hr/>    
+      <div class="bg-info" style="padding:10px; margin-bottom:10px;">
+        <p class="lead">事後調査情報</p>        
+        <div class="form-group">
+          <%= f.label :overview_after_survey, '建物概要' %>
+          <%= f.select :overview_after_survey, $SURVEY_OVERVIEW, :prompt => "選択してください" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :range_after_survey, '調査範囲' %>
+          <%= f.text_field :range_after_survey, :class=>"form-control" %>
+        </div>
+      </div>       
       <%= f.submit '登録', :class=>"btn btn-primary" %>
     <% end %>
   </div>
