--- a/app/views/investigations/_form.html.erb
+++ b/app/views/investigations/_form.html.erb
@@ -16,7 +16,7 @@
 
       <div class="form-group">
         <%= f.label :builder, '施工者*：' %>
-        <%= f.collection_select :builder, Choice.all.where(category: 1), :name, :name, :prompt => "選択してください", :class=>"form-control" %>
+        <%= f.collection_select :builder, Choice.where(category: "施工者"), :name, :name, :prompt => "選択してください" %>
       </div>
 
       <div class="form-group">
@@ -25,8 +25,16 @@
       </div> 
 
       <div class="form-group">
-        <%= f.label :investigator, '調査機関*：' %>
-        <%= f.collection_select :investigator, Choice.all.where(category: 2), :name, :name, :prompt => "選択してください", :class=>"form-control" %>
+        <%= f.label :investigator_pre_survey, '調査機関（事前調査）：' %>
+        <%= f.collection_select :investigator_pre_survey, Choice.where(category: "調査機関"), :name, :name, :prompt => "選択してください" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :investigator_ongoing_survey, '調査機関（事中調査）：' %>
+        <%= f.collection_select :investigator_ongoing_survey, Choice.where(category: "調査機関"), :name, :name, :prompt => "選択してください" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :investigator_after_survey, '調査機関（事後調査）：' %>
+        <%= f.collection_select :investigator_after_survey, Choice.where(category: "調査機関"), :name, :name, :prompt => "選択してください" %>
       </div>
       
       <%= f.submit '登録', :class=>"btn btn-primary" %>
