--- a/app/views/points/unused/new.html.erb
+++ b/app/views/points/unused/new.html.erb
@@ -2,8 +2,8 @@
   <li><%= link_to 'HOME', root_path %></li>
   <li><%= link_to @investigation.construction_name, @investigation %></li>
   <li><%= link_to @house.house_name, @house %></li>
-  <li class="active">新規調査登録</li>
+  <li class="active">新規測点登録</li>
 </ol>
 
-<h2 class="text-center">新規調査登録</h2>
-<%= render 'surveys/form' %>
+<h2 class="text-center">新規測点登録</h2>
+<%= render 'points/form' %>
