--- a/app/views/investigations/pdf_pre_survey.html.erb
+++ b/app/views/investigations/pdf_pre_survey.html.erb
@@ -34,9 +34,9 @@ body {
 }
 .subpage {
     padding: 1cm;
-    border: 5px red solid;
+    //border: 5px red solid;
     height: 256mm;
-    outline: 2cm #FFEAEA solid;
+    //outline: 2cm #FFEAEA solid;
 }
 @page {
     size: A4;
