--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,8 @@
     </div>
     
     <!-- フッターは#wrapの外に -->
-    <div id="footer">
-      <%= render 'layouts/footer' %>
-    </div>
+    <!-- <div id="footer"> -->
+      <%#= render 'layouts/footer' %>
+    <!-- </div> -->
   </body>
 </html>
