--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">KHS <span style="font-size: 1.0rem;">KINSOKU House-Investigated System</span></a>
+        <a class="navbar-brand" href="/">KHS <span style="font-size: 1.0rem;">KINSOKU House-Investigated System ver 0.71</span></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
