--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,45 +9,40 @@
   else
     survey_type_name = "その他"
   end
+  
+  position_wb = @post.position_wb
+  if position_wb == 0
+    position_wb_name = "左"
+  elsif position_wb == 1
+    position_wb_name = "左上"
+  elsif position_wb == 2
+    position_wb_name = "上"
+  elsif position_wb == 3
+    position_wb_name = "右上"
+  elsif position_wb == 4
+    position_wb_name = "右"
+  elsif position_wb == 5
+    position_wb_name = "右下"
+  elsif position_wb == 6
+    position_wb_name = "下"
+  elsif position_wb == 7
+    position_wb_name = "左下"
+  else
+    position_wb_name = "その他"
+  end    
 %>
 
 <ol class="breadcrumb">
   <li><%= link_to 'HOME', root_path %></li>
   <li><%= link_to @investigation.construction_name, @investigation %></li>
   <li><%= link_to @house.house_name, @house %></li>
-  <li class="active">測点No.<%= @point.number %>（<%= survey_type_name %>）</li>
+  <li class="active">測点.<%= @point.number %>（<%= survey_type_name %>）</li>
 </ol>
 
+<h2 class="text-center">測点：P.<%= @point.number %>の撮影（<%= survey_type_name %>）</h2>
+<%= link_to '編集', edit_post_path(point_id: @point.id, survey_type: survey_type), :class=>"btn btn-primary" %>
+
 <p class="text-center"><%= image_tag @post.image1 %></p>
+<p>ホワイトボードの配置：<%= position_wb_name %></p>
 
-<%= form_for(@post) do |f| %>
-  <div class="form-group"  style="margin-top: 20px;">
-    <div class="switch_set disabled">
-      <%= f.check_box :genkyo, {}, "true", "false" %><%= f.label :genkyo, '現況' %>
-      <%= f.check_box :sukima, {}, "true", "false" %><%= f.label :sukima, '隙間' %>
-      <%= f.check_box :ware, {}, "true", "false" %><%= f.label :ware, '割れ' %>
-      <%= f.check_box :kake, {}, "true", "false" %><%= f.label :kake, '欠け' %>
-      <%= f.check_box :amimejyo, {}, "true", "false" %><%= f.label :amimejyo, '網目状' %>
-      <%= f.check_box :zencho, {}, "true", "false" %><%= f.label :zencho, '全長' %>
-      <%= f.check_box :sokuten, {}, "true", "false" %><%= f.label :sokuten, '測点' %>
-      <%= f.check_box :crack, {}, "true", "false" %><%= f.label :crack, 'クラック' %>
-      <%= f.check_box :tile, {}, "true", "false" %><%= f.label :tile, 'タイル' %>
-      <%= f.check_box :kire, {}, "true", "false" %><%= f.label :kire, '切れ' %>
-      <%= f.check_box :uki, {}, "true", "false" %><%= f.label :uki, '浮き' %>
-      <%= f.check_box :suhon, {}, "true", "false" %><%= f.label :suhon, '数本' %>
-      <%= f.check_box :zenshu, {}, "true", "false" %><%= f.label :zenshu, '全周' %>
-      <%= f.check_box :suichokukeisya, {}, "true", "false" %><%= f.label :suichokukeisya, '垂直傾斜' %>
-      <%= f.check_box :chirigire, {}, "true", "false" %><%= f.label :chirigire, 'チリ切れ' %>
-      <%= f.check_box :cross, {}, "true", "false" %><%= f.label :cross, 'クロス' %>
-      <%= f.check_box :meji, {}, "true", "false" %><%= f.label :meji, '目地' %>
-      <%= f.check_box :tategu, {}, "true", "false" %><%= f.label :tategu, '建具' %>
-      <%= f.check_box :tasu, {}, "true", "false" %><%= f.label :tasu, '多数' %>
-      <%= f.check_box :kakusyo, {}, "true", "false" %><%= f.label :kakusyo, '各所' %>
-      <%= f.check_box :suiheikeisya, {}, "true", "false" %><%= f.label :suiheikeisya, '水平傾斜' %>
-    </div>
-  </div>
-<% end %>
-
-<p>幅：<%= @post.wide %> mm</p>
-<p>長さ：<%= @post.length %> cm</p>
 <p>コメント：<%= @post.comment %></p>
